fix(input): the input prefix icon was not centered vertically

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -37,7 +37,6 @@
 
     wcs-mat-icon {
         position: relative;
-        margin-top: 8px;
         margin-left: 8px;
         margin-right: -8px;
     }
